--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-heart"></i>
-                  <i class="icon-heart feature__overlay-icon"></i>
+                  <i class="icon-head"></i>
+                  <i class="icon-head feature__overlay-icon"></i>
                 </div>
                 <h4 class="feature__title">Hematologia</h4>
               </div><!-- /.feature__content -->
@@ -204,8 +204,8 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-doctor"></i>
-                  <i class="icon-doctor feature__overlay-icon"></i>
+                  <i class="icon-heart"></i>
+                  <i class="icon-heart feature__overlay-icon"></i>
                 </div>
                 <h4 class="feature__title">Imuno-hematologia</h4>
               </div><!-- /.feature__content -->
@@ -216,8 +216,8 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-ambulance"></i>
-                  <i class="icon-ambulance feature__overlay-icon"></i>
+                  <i class="icon-microscope"></i>
+                  <i class="icon-microscope feature__overlay-icon"></i>
                 </div>
                 <h4 class="feature__title">Citometria de fluxo</h4>
               </div><!-- /.feature__content -->
@@ -230,8 +230,8 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-heart"></i>
-                  <i class="icon-heart feature__overlay-icon"></i>
+                  <i class="icon-dropper"></i>
+                  <i class="icon-dropper feature__overlay-icon"></i>
                 </div>
                 <h4 class="feature__title">Urinálises</h4>
               </div><!-- /.feature__content -->
@@ -242,8 +242,8 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-doctor"></i>
-                  <i class="icon-doctor feature__overlay-icon"></i>
+                  <i class="icon-heart3"></i>
+                  <i class="icon-heart3 feature__overlay-icon"></i>
                 </div>
                 <h4 class="feature__title">Parasitologia</h4>
               </div><!-- /.feature__content -->
@@ -254,21 +254,21 @@
             <div class="feature-item">
               <div class="feature__content">
                 <div class="feature__icon">
-                  <i class="icon-ambulance"></i>
-                  <i class="icon-ambulance feature__overlay-icon"></i>
+                  <i class="icon-heart2"></i>
+                  <i class="icon-heart2 feature__overlay-icon"></i>
                 </div>
-                <h4 class="feature__title">Emergency Help Available 24/7</h4>
+                <h4 class="feature__title">Microbiologia</h4>
               </div><!-- /.feature__content -->
             </div><!-- /.feature-item -->
           </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
         <div class="row">
           <div class="col-md-12 col-lg-6 offset-lg-3 text-center">
-            <p class="font-weight-bold mb-0">Serve the community by improving the quality of life through better health.
-              We have put protocols to protect our patients and staff while continuing to provide medically necessary
-              care.
+            <p class="font-weight-bold mb-0">Servir a comunidade melhorando a qualidade de vida através de uma saúde
+              melhor. Colocamos protocolos para proteger nossos pacientes e funcionários, enquanto continuamos a
+              fornecer os cuidados médicos necessários.
               <a href="#" class="color-secondary">
-                <span>Contact Us For More Information</span> <i class="icon-arrow-right"></i>
+                <span>Entre em contato</span> <i class="icon-arrow-right"></i>
               </a>
             </p>
           </div><!-- /.col-lg-6 -->
