--- a/servicos.html
+++ b/servicos.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Medcity - Medical Healthcare HTML5 Template">
+  <meta name="description" content="Hemolab - Laboratório de Hematologia e Análises Clínicas">
   <link href="assets/images/favicon/hemolab-icone.ico" rel="icon">
-  <title>Medcity - Medical Healthcare HTML5 Template</title>
+  <title>Hemolab - Laboratório de análises clínicas</title>
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap">
@@ -31,11 +31,12 @@
           <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo-header.png" class="logo-dark" alt="logo">
           </a>
+          <div class="separador"></div>
           <button class="navbar-toggler" type="button">
             <span class="menu-lines"><span></span></span>
           </button>
           <div class="collapse navbar-collapse" id="mainNavigation">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav mr-auto">
               <li class="nav__item">
                 <a href="index.html" class="nav__item-link">Home</a>
               </li><!-- /.nav-item -->
@@ -54,10 +55,12 @@
               <li class="nav__item">
                 <a href="quem-somos.html" class="nav__item-link">Quem Somos</a>
               </li><!-- /.nav-item -->
+
             </ul><!-- /.navbar-nav -->
             <button class="close-mobile-menu d-block d-lg-none"><i class="fas fa-times"></i></button>
           </div><!-- /.navbar-collapse -->
-          <div class="d-none d-xl-flex align-items-center position-relative ml-0">
+          <div class="separador" id="separador_resultado"></div>
+          <div class="d-xl-flex align-items-center position-relative ml-0 mr-1">
             <a href="https://www.pulsesaude.com.br/" class="btn btn__primary btn__rounded ml-30">
               <span>Resultados</span>
             </a>
