--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </div><!-- /.navbar-collapse -->
           <div class="separador" id="separador_resultado"></div>
-          <div class="d-xl-flex align-items-center position-relative ml-0 mr-1">
+          <div class="d-xl-flex align-items-center position-relative">
             <a href="https://www.pulsesaude.com.br/" class="btn btn__primary btn__rounded ml-30">
               <span>Resultados</span>
             </a>
@@ -305,7 +305,7 @@
             <div class="carousel-container">
               <div class="slick-carousel carousel-arrows-light carousel-dots-light"
                 data-slick='{"slidesToShow": 4, "slidesToScroll": 2, "autoplay": true, "arrows": true, "dots": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
-                <!-- service item #1 -->
+                <!-- unidade-item #1 -->
                 <div class="service-item">
                   <div class="service__img">
                     <img src="assets/images/services/1.jpg" alt="img" loading="lazy">
@@ -327,9 +327,9 @@
                         das 6:30h
                         as 10:30h</span>
                     </div>
-                  </div><!-- /.service__content -->
-                </div><!-- /.service-item -->
-                <!-- service item #2 -->
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #2 -->
                 <div class="service-item">
                   <div class="service__img">
                     <img src="assets/images/services/2.jpg" alt="img" loading="lazy">
@@ -344,9 +344,9 @@
                       <span>Read More</span>
                       <i class="icon-arrow-right"></i>
                     </a>
-                  </div><!-- /.service__content -->
-                </div><!-- /.service-item -->
-                <!-- service item #3 -->
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #3 -->
                 <div class="service-item">
                   <div class="service__img">
                     <img src="assets/images/services/3.jpg" alt="img" loading="lazy">
@@ -361,8 +361,8 @@
                       <span>Read More</span>
                       <i class="icon-arrow-right"></i>
                     </a>
-                  </div><!-- /.service__content -->
-                </div><!-- /.service-item -->
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
               </div><!-- /.carousel -->
             </div><!-- /.carousel-container -->
           </div><!-- /.col-12 -->
@@ -376,10 +376,10 @@
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </section><!-- /.Services Layout 1 -->
+    </section><!-- /.Unidades-->
 
     <!-- ======================
-      Team
+      Certificados
     ========================= -->
     <section class="team-layout1 pb-80">
       <div class="container">
@@ -414,9 +414,9 @@
                       <i class="icon-arrow-right"></i>
                     </a>
                   </div>
-                </div><!-- /.member-info -->
-              </div><!-- /.member -->
-              <!-- Member #2 -->
+                </div><!-- /.cert-info -->
+              </div><!-- /.Certificado 1 -->
+              <!-- Certificado 2 -->
               <div class="member">
                 <div class="member__img">
                   <img src="assets/images/team/2.jpg" alt="member img">
@@ -432,9 +432,9 @@
                       <i class="icon-arrow-right"></i>
                     </a>
                   </div>
-                </div><!-- /.member-info -->
-              </div><!-- /.member -->
-              <!-- Member #3 -->
+                </div><!-- /.cert-info -->
+              </div><!-- /.Certificado 2 -->
+              <!-- Certificado 3 -->
               <div class="member">
                 <div class="member__img">
                   <img src="assets/images/team/3.jpg" alt="member img">
@@ -450,16 +450,16 @@
                       <i class="icon-arrow-right"></i>
                     </a>
                   </div>
-                </div><!-- /.member-info -->
-              </div><!-- /.member -->
+                </div><!-- /.cert-info -->
+              </div><!-- /.Certificado 3 -->
             </div><!-- /.carousel -->
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </section><!-- /.Team -->
+    </section><!-- /.certificados -->
 
     <!-- ========================= 
-      Testimonials layout 1
+      Feedback
       =========================  -->
     <section class="testimonials-layout1 pt-130 pb-80">
       <div class="container">
@@ -528,15 +528,6 @@
                   </h3>
                 </div><!-- /. testimonial-item -->
               </div><!-- /.slick-carousel -->
-              <div class="testimonials__rating">
-                <div class="testimonials__rating-inner d-flex align-items-center">
-                  <span class="total__rate">4.9</span>
-                  <div>
-                    <span class="overall__rate">Zocdoc Overall Rating</span>
-                    <span>, based on 7541 reviews.</span>
-                  </div>
-                </div><!-- /.testimonials__rating-inner -->
-              </div><!-- /.testimonials__rating -->
             </div><!-- /.col-lg-7 -->
           </div><!-- /.row -->
         </div><!-- /.testimonials-wrapper -->
@@ -560,24 +551,26 @@
           <div class="col-12">
             <div class="slick-carousel"
               data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": true, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
-              <a class="popup-gallery-item" href="assets/images/gallery/1.jpg">
-                <img src="assets/images/gallery/1.jpg" alt="gallery img">
-              </a>
-              <a class="popup-gallery-item" href="assets/images/gallery/2.jpg">
-                <img src="assets/images/gallery/2.jpg" alt="gallery img">
-              </a>
-              <a class="popup-gallery-item" href="assets/images/gallery/3.jpg">
-                <img src="assets/images/gallery/3.jpg" alt="gallery img">
-              </a>
-              <a class="popup-gallery-item" href="assets/images/gallery/4.jpg">
-                <img src="assets/images/gallery/4.jpg" alt="gallery img">
-              </a>
-              <a class="popup-gallery-item" href="assets/images/gallery/5.jpg">
-                <img src="assets/images/gallery/5.jpg" alt="gallery img">
-              </a>
-              <a class="popup-gallery-item" href="assets/images/gallery/6.jpg">
-                <img src="assets/images/gallery/6.jpg" alt="gallery img">
-              </a>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+              <div class="img-convenio">
+                <img src="assets/images/gallery/convenio.png" alt="gallery img">
+              </div>
+
+
             </div><!-- /.gallery-images-wrapper -->
           </div><!-- /.col-xl-5 -->
         </div><!-- /.row -->
