--- a/quem-somos.html
+++ b/quem-somos.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 offset-xl-2">
             <div class="pagetitle__icon">
-              <i class="icon-microscope"></i>
+              <img class="" src="assets/images/page-titles/quem-somos.png">
             </div>
             <h1 class="pagetitle__heading">Quem Somos</h1>
             <p class="pagetitle__desc mb-30">Inaugurado em 08 de maio de 1992 para exercer atividade em análises
@@ -789,89 +789,43 @@
     ========================== -->
     <footer class="footer">
       <div class="footer-primary">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-3">
-              <div class="footer-widget-about">
-                <img src="assets/images/logo/logo-light.png" alt="logo" class="mb-30">
-                <p class="color-gray">Our goal is to deliver quality of care in a courteous, respectful, and
-                  compassionate manner. We hope you will allow us to care for you and strive to be the first and best
-                  choice for your family healthcare.
-                </p>
-                <a href="appointment.html" class="btn btn__primary btn__primary-style2 btn__link">
-                  <span>Make Appointment</span> <i class="icon-arrow-right"></i>
-                </a>
+        <div class="container itens-footer1">
+          <div class="row ml-3 mb-40">
+            <div class="row">
+              <div class="navbar-brand">
+                <img src="assets/images/logo/logo-footer.png" alt="logo" class="mb-5">
               </div><!-- /.footer-widget__content -->
-            </div><!-- /.col-xl-2 -->
-            <div class="col-sm-6 col-md-6 col-lg-2 offset-lg-1">
-              <div class="footer-widget-nav">
-                <h6 class="footer-widget__title">Departments</h6>
-                <nav>
-                  <ul class="list-unstyled">
-                    <li><a href="#">Neurology Clinic</a></li>
-                    <li><a href="#">Cardiology Clinic</a></li>
-                    <li><a href="#">Pathology Clinic</a></li>
-                    <li><a href="#">Laboratory Analysis</a></li>
-                    <li><a href="#">Pediatric Clinic</a></li>
-                    <li><a href="#">Cardiac Clinic</a></li>
-                  </ul>
-                </nav>
-              </div><!-- /.footer-widget__content -->
-            </div><!-- /.col-lg-2 -->
-            <div class="col-sm-6 col-md-6 col-lg-2">
-              <div class="footer-widget-nav">
-                <h6 class="footer-widget__title">Links</h6>
-                <nav>
-                  <ul class="list-unstyled">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Our CLinic</a></li>
-                    <li><a href="#">Our Doctors</a></li>
-                    <li><a href="#">News & Media</a></li>
-                    <li><a href="#">Appointments</a></li>
-                  </ul>
-                </nav>
-              </div><!-- /.footer-widget__content -->
-            </div><!-- /.col-lg-2 -->
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="footer-widget-contact">
-                <h6 class="footer-widget__title color-heading">Quick Contacts</h6>
-                <ul class="contact-list list-unstyled">
-                  <li>If you have any questions or need help, feel free to contact with our team.</li>
-                  <li>
-                    <a href="tel:01061245741" class="phone__number">
-                      <i class="icon-phone"></i> <span>01061245741</span>
-                    </a>
-                  </li>
-                  <li class="color-body">2307 Beverley Rd Brooklyn, New York 11226 United States.</li>
-                </ul>
-                <div class="d-flex align-items-center">
-                  <a href="contact-us.html" class="btn btn__primary btn__link mr-30">
-                    <i class="icon-arrow-right"></i> <span>Get Directions</span>
-                  </a>
-                  <ul class="social-icons list-unstyled mb-0">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  </ul><!-- /.social-icons -->
-                </div>
-              </div><!-- /.footer-widget__content -->
-            </div><!-- /.col-lg-2 -->
+            </div>
           </div><!-- /.row -->
+          <div class="row ml-0 col-8">
+            <div class="descricao-footer">
+              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
+                teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
+            </div>
+          </div>
+          <div class="row mt-40 ml-0">
+            <div class="d-flex align-items-center">
+              <ul class="social-icons list-unstyled">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+              </ul><!-- /.social-icons -->
+            </div><!-- /.row -->
+          </div><!-- /.footer-widget__content -->
         </div><!-- /.container -->
       </div><!-- /.footer-primary -->
       <div class="footer-secondary">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-6 col-lg-6">
-              <span class="fz-14">&copy; 2020 DataSoft, All Rights Reserved. With Love by</span>
-              <a class="fz-14 color-primary" href="http://themeforest.net/user/7oroof">7oroof.com</a>
+              <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
+              <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
             </div><!-- /.col-lg-6 -->
             <div class="col-sm-12 col-md-6 col-lg-6">
-              <nav>
+              <nav class="cookies-privacidade">
                 <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
-                  <li><a href="#">Terms & Conditions</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Cookies</a></li>
+                  <li class="mr-50"><a href="#">Cookies</a></li>
+                  <li><a href="#">Políticas de Privacidade</a></li>
                 </ul>
               </nav>
             </div><!-- /.col-lg-6 -->
@@ -879,12 +833,10 @@
         </div><!-- /.container -->
       </div><!-- /.footer-secondary -->
     </footer><!-- /.Footer -->
-    <button id="scrollTopBtn"><i class="fas fa-long-arrow-alt-up"></i></button>
-  </div><!-- /.wrapper -->
 
-  <script src="assets/js/jquery-3.5.1.min.js"></script>
-  <script src="assets/js/plugins.js"></script>
-  <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
