ajustes responsivos no header

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               </li><!-- /.nav-item -->
             </ul><!-- /.navbar-nav -->
             <button class="close-mobile-menu d-block d-lg-none"><i class="fas fa-times"></i></button>
-            <div class="col-xl-2 lista_contato">
-              <a href="tel:558436165000" class="contato_topo mb-2">
+            <div class="col-xl-3 lista_contato">
+              <a href="tel:558436165000" class="contato_topo">
                 <i class="fa-solid fa-phone"></i><span>(84) 3616-5000</span>
               </a>
               <a href="https://wa.me/558436165001" target="_blank" class="contato_topo">
