ajustes nos ícones do título e remoção das arrows de convenio

--- a/exames.html
+++ b/exames.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 offset-xl-2">
             <div class="pagetitle__icon">
-              <img class="" src="assets/images/page-titles/exames.png">
+              <img id="icon-exame" src="assets/images/page-titles/exames.png">
             </div>
             <h1 class="pagetitle__heading">Exames</h1>
             <p class="pagetitle__desc mb-30">Busque pelo exame para saber em detalhes acerca do material, instruções,
