--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     <!-- ========================
     Convênios
     =========================== -->
-    <section class="gallery pt-90 pb-90">
+    <section class="gallery pt-150 pb-150">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
@@ -550,7 +550,7 @@
           </div><!-- /.col-lg-6 -->
           <div class="col-12">
             <div class="slick-carousel"
-              data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": true, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
+              data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": false, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
               <div class="img-convenio">
                 <img src="assets/images/gallery/convenio.png" alt="gallery img">
               </div>
@@ -569,8 +569,6 @@
               <div class="img-convenio">
                 <img src="assets/images/gallery/convenio.png" alt="gallery img">
               </div>
-
-
             </div><!-- /.gallery-images-wrapper -->
           </div><!-- /.col-xl-5 -->
         </div><!-- /.row -->
