adição de botão de whats

--- a/unidades.html
+++ b/unidades.html
@@ -93,7 +93,7 @@
     <!-- ========================
         Unidades
     =========================== -->
-    <section class="services-layout2 services-carousel">
+    <section class="services-layout2 services-carousel" id="content">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
