--- a/certificados.html
+++ b/certificados.html
@@ -93,7 +93,7 @@
     <!-- ======================
       Certificados
     ========================= -->
-    <section class="team-layout1 pb-80">
+    <section class="services-layout2" id="content">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
@@ -120,12 +120,6 @@
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.
                   </p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 1 -->
               <!-- Certificado 2 -->
@@ -138,12 +132,6 @@
                   <p class="member__job">Categoria Diamante</p>
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 2 -->
               <!-- Certificado 3 -->
@@ -156,12 +144,6 @@
                   <p class="member__job">Categoria Diamante</p>
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 3 -->
             </div><!-- /.carousel -->
@@ -185,7 +167,8 @@
           </div><!-- /.row -->
           <div class="row ml-0 col-8">
             <div class="descricao-footer">
-              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
+              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular,
+                citogenética,
                 teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
             </div>
           </div>
