--- a/exames.html
+++ b/exames.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Hemolab - Laboratório de Hematologia e Análises Clínicas">
   <link href="assets/images/favicon/hemolab-icone.ico" rel="icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Hemolab - Laboratório de análises clínicas</title>
 
   <link rel="stylesheet"
@@ -92,64 +94,22 @@
     <!-- ======================
        FAQ
     ========================= -->
-    <section class="faq pt-120 pb-70">
+    <section class="faq pt-120 pb-70" id="content">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-4">
-            <aside class="sidebar has-marign-right">
-              <div class="widget widget-help bg-overlay bg-overlay-secondary-gradient">
-                <div class="bg-img"><img src="assets/images/banners/5.jpg" alt="background"></div>
-                <div class="widget-content">
-                  <div class="widget__icon">
-                    <i class="icon-call3"></i>
-                  </div>
-                  <h4 class="widget__title">Emergency Cases</h4>
-                  <p class="widget__desc">Please feel welcome to contact our friendly reception staff with any general
-                    or medical enquiry call us.
-                  </p>
-                  <a href="tel:+201061245741" class="phone__number">
-                    <i class="icon-phone"></i> <span>01061245741</span>
-                  </a>
-                </div><!-- /.widget-content -->
-              </div><!-- /.widget-help -->
-              <div class="widget widget-schedule">
-                <div class="widget-content">
-                  <div class="widget__icon">
-                    <i class="icon-charity2"></i>
-                  </div>
-                  <h4 class="widget__title">Opening Hours</h4>
-                  <ul class="time__list list-unstyled mb-0">
-                    <li><span>Monday - Friday</span><span>8.00 - 7:00 pm</span></li>
-                    <li><span>Saturday</span><span>9.00 - 10:00 pm</span></li>
-                    <li><span>Sunday</span><span>10.00 - 12:00 pm</span></li>
-                  </ul>
-                </div><!-- /.widget-content -->
-              </div><!-- /.widget-schedule -->
-              <div class="widget widget-reports">
-                <a href="#" class="btn btn__primary btn__block">
-                  <i class="icon-pdf-file"></i>
-                  <span>2020 Patient Reports</span>
-                </a>
-              </div>
-            </aside><!-- /.sidebar -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-sm-12 col-md-12 col-lg-8" id="accordion">
+        <div class="card-exames row">
+          <div class="col-sm-12 col-md-12 col-lg-12" id="accordion">
+            <div>
+              <h5>Listagem de exames</h5>
+            </div>
+            <div class="input-group rounded mb-80">
+              <input type="search" class="form-control rounded" placeholder="Pesquisar exame" aria-label="Search"
+                aria-describedby="search-addon" style="height: 46px;">
+            </div>
             <div class="accordion-item opened">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse3">
-                <a class="accordion__title" href="#">What Payment Methods Are Available?</a>
+              <div class="accordion__header" data-toggle="collapse" data-target="#collapse1" aria-expanded="false">
+                <a class="accordion__title" href="#">PCR PARA VÍRUS MAYARO</a>
               </div><!-- /.accordion-item-header -->
-              <div id="collapse3" class="collapse show" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse1">
-                <a class="accordion__title" href="#">Which Plan Is Right For Me?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse1" class="collapse" data-parent="#accordion">
+              <div id="collapse1" class="collapse show" data-parent="#accordion">
                 <div class="accordion__body">
                   <p>With any financial product that you buy, it is important that you know you are getting the best
                     advice from a reputable company as often</p>
@@ -168,87 +128,11 @@
               </div>
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse4">
-                <a class="accordion__title" href="#">What if I pick the wrong plan?</a>
+              <div class="accordion__header collapsed" data-toggle="collapse" data-target="#collapse3"
+                aria-expanded="true">
+                <a class="accordion__title" href="#">PCR PARA VÍRUS OROPOUCHE</a>
               </div><!-- /.accordion-item-header -->
-              <div id="collapse4" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse5">
-                <a class="accordion__title" href="#">Any contracts or commitments?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse5" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse4">
-                <a class="accordion__title" href="#">What if I pick the wrong plan?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse4" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse5">
-                <a class="accordion__title" href="#">Any contracts or commitments?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse5" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse1">
-                <a class="accordion__title" href="#">Which Plan Is Right For Me?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse1" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse2">
-                <a class="accordion__title" href="#">Do I have to commit to a contract?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse2" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse4">
-                <a class="accordion__title" href="#">What if I pick the wrong plan?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse4" class="collapse" data-parent="#accordion">
-                <div class="accordion__body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
-                </div><!-- /.accordion-item-body -->
-              </div>
-            </div><!-- /.accordion-item -->
-            <div class="accordion-item">
-              <div class="accordion__header" data-toggle="collapse" data-target="#collapse5">
-                <a class="accordion__title" href="#">Any contracts or commitments?</a>
-              </div><!-- /.accordion-item-header -->
-              <div id="collapse5" class="collapse" data-parent="#accordion">
+              <div id="collapse3" class="collapse" data-parent="#accordion">
                 <div class="accordion__body">
                   <p>With any financial product that you buy, it is important that you know you are getting the best
                     advice from a reputable company as often</p>
@@ -280,8 +164,7 @@
           </div><!-- /.col-lg-8 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </section><!-- /.FAQ -->
-
+    </section>
 
     <!-- ========================
       Footer
@@ -336,6 +219,11 @@
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
