--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
           </div><!-- /.navbar-collapse -->
           <div class="separador" id="separador_resultado"></div>
-          <div class="d-xl-flex align-items-center position-relative">
-            <a href="https://www.pulsesaude.com.br/" class="btn btn__primary btn__rounded ml-30">
+          <div class="botao-resultados d-xl-flex align-items-center position-relative">
+            <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-30">
               <span>Resultados</span>
             </a>
           </div>
@@ -81,7 +81,7 @@
     ============================== -->
     <section class="slider">
       <div class="slick-carousel m-slides-0"
-        data-slick='{"slidesToShow": 1, "arrows": true, "dots": false, "speed": 700,"fade": true,"cssEase": "linear"}'>
+        data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear"}'>
         <div class="slide-item align-v-h">
           <div class="bg-img"><img src="assets/images/sliders/2.jpg" alt="slide img"></div>
           <div class="container">
@@ -93,7 +93,7 @@
                     Acesso os resultados dos exames, encontre a unidade mais próxima e muito mais.
                   </p>
                   <div class="d-flex flex-wrap align-items-center">
-                    <a href="https://play.google.com/store/apps/details?id=br.com.nd.hemolab.app"
+                    <a href="https://play.google.com/store/apps/details?id=br.com.nd.hemolab.app" target="_blank"
                       class="btn btn__primary btn__rounded mr-30 btn__slider">
                       <span>Acessar agora</span>
                     </a>
@@ -550,7 +550,7 @@
           </div><!-- /.col-lg-6 -->
           <div class="col-12">
             <div class="slick-carousel"
-              data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": false, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
+              data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": true, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
               <div class="img-convenio">
                 <img src="assets/images/gallery/convenio.png" alt="gallery img">
               </div>
@@ -595,39 +595,42 @@
             </div>
           </div>
           <div class="row mt-40 ml-0">
-            <div class="d-flex align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-4">
               <ul class="social-icons list-unstyled">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
               </ul><!-- /.social-icons -->
-            </div><!-- /.row -->
-          </div><!-- /.footer-widget__content -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-primary -->
-      <div class="footer-secondary">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
-              <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
-            </div><!-- /.col-lg-6 -->
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <nav class="cookies-privacidade">
-                <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
-                  <li class="mr-50"><a href="#">Cookies</a></li>
-                  <li><a href="#">Políticas de Privacidade</a></li>
-                </ul>
-              </nav>
-            </div><!-- /.col-lg-6 -->
+            </div>
           </div><!-- /.row -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-secondary -->
-    </footer><!-- /.Footer -->
-
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
+        </div><!-- /.footer-widget__content -->
+      </div><!-- /.container -->
+  </div><!-- /.footer-primary -->
+  <div class="footer-secondary">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
+          <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
+        </div><!-- /.col-lg-6 -->
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <nav class="cookies-privacidade">
+            <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
+              <li class="mr-50"><a href="#">Cookies</a></li>
+              <li><a href="#">Políticas de Privacidade</a></li>
+            </ul>
+          </nav>
+        </div><!-- /.col-lg-6 -->
+      </div><!-- /.row -->
+    </div><!-- /.container -->
+  </div><!-- /.footer-secondary -->
+  </footer><!-- /.Footer -->
+  <div class="whats">
+    <a class="link-whats" href="https://wa.me/558436165001" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+  </div>
+  <script src=" assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/plugins.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
