mais ajustes responsivos e de texto

--- a/certificados.html
+++ b/certificados.html
@@ -97,11 +97,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
-            <div class="heading text-center mb-40">
-              <h3 class="heading__title">Certificados</h3>
-              <p class="heading__desc">Somos o único laboratório do Rio Grande do Norte certificado pelo Sistema
-                Nacional de Acreditação da Sociedade Brasileira de Análises Clínicas.
-              </p>
+            <div class="heading text-center mb-60">
+              <h2 class="heading__subtitle">Excelência acima de tudo</h2>
+              <h3 class="heading__title">Confira os nossos certificados</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
