--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 d-flex align-items-end mt-50 mb-100">
             <div class="video-banner">
               <img src="assets/images/about/1.jpg" alt="about">
-              <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
+              <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=NQ6vgPDTc1k">
                 <div class="video__player">
                   <i class="fa fa-play"></i>
                 </div>
@@ -329,40 +329,6 @@
                     </div>
                   </div><!-- /.unidade__content -->
                 </div><!-- /.unidade-item -->
-                <!-- unidade-item #2 -->
-                <div class="service-item">
-                  <div class="service__img">
-                    <img src="assets/images/services/2.jpg" alt="img" loading="lazy">
-                  </div><!-- /.service__img -->
-                  <div class="service__content">
-                    <h4 class="service__title">Cardiology Clinic</h4>
-                    <p class="service__desc">All cardiologists study the disorders of the heart, but the study of adult
-                      and
-                      child heart disorders are trained to take care of small children and adult heart disease.
-                    </p>
-                    <a href="departments-single.html" class="btn btn__secondary btn__outlined btn__rounded">
-                      <span>Read More</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div><!-- /.unidade__content -->
-                </div><!-- /.unidade-item -->
-                <!-- unidade-item #3 -->
-                <div class="service-item">
-                  <div class="service__img">
-                    <img src="assets/images/services/3.jpg" alt="img" loading="lazy">
-                  </div><!-- /.service__img -->
-                  <div class="service__content">
-                    <h4 class="service__title">Pathology Clinic</h4>
-                    <p class="service__desc">Pathology is the study of disease, it is the bridge between science and
-                      medicine.
-                      Also it underpins every aspect of patient care, from diagnostic testing and treatment.
-                    </p>
-                    <a href="departments-single.html" class="btn btn__secondary btn__outlined btn__rounded">
-                      <span>Read More</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div><!-- /.unidade__content -->
-                </div><!-- /.unidade-item -->
               </div><!-- /.carousel -->
             </div><!-- /.carousel-container -->
           </div><!-- /.col-12 -->
@@ -370,7 +336,7 @@
         <div class="row">
           <div class="col-12 d-flex justify-content-end mt--20">
             <a href="departments.html" class="btn btn__white btn__link">
-              <span>ALl Departments</span>
+              <span>Saiba mais</span>
               <i class="icon-arrow-right"></i>
             </a>
           </div><!-- /.col-12 -->
@@ -588,7 +554,7 @@
               </div><!-- /.footer-widget__content -->
             </div>
           </div><!-- /.row -->
-          <div class="row ml-0 col-8">
+          <div class="row ml-0 col-lg-8 col-sm-12">
             <div class="descricao-footer">
               <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
                 teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
