--- a/unidades.html
+++ b/unidades.html
@@ -98,8 +98,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-60">
-              <h2 class="heading__subtitle">Confiabilidade e experiência</h2>
-              <h3 class="heading__title">Confira os principais exames que ofertamos</h3>
+              <h2 class="heading__subtitle">Sempre próximos de você</h2>
+              <h3 class="heading__title">Encontre a unidade Hemolab mais próxima</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
@@ -117,10 +117,6 @@
                     and
                     child heart disorders are trained to take care of small children and adult heart disease.
                   </p>
-                  <a href="departments-single.html" class="btn btn__secondary btn__outlined btn__rounded">
-                    <span>Read More</span>
-                    <i class="icon-arrow-right"></i>
-                  </a>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
               <!-- unidade-item #2 -->
