Commit final esperando conteúdo.

--- a/servicos.html
+++ b/servicos.html
@@ -77,7 +77,7 @@
        page title 
     =========================== -->
     <section class="page-title page-title-layout2 bg-overlay text-center pb-90">
-      <div class="bg-img"><img src="assets/images/page-titles/3.jpg" alt="background"></div>
+      <div class="bg-img"><img src="assets/images/backgrounds/cinza.png" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 offset-xl-2">
@@ -124,11 +124,6 @@
                   of
                   the fields, these training programs are called fellowships, and are one to two years.
                 </p>
-                <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Neurocritical Care</li>
-                  <li>Neuro Oncology</li>
-                  <li>Geriatric Neurology</li>
-                </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -144,11 +139,6 @@
                 <p class="service__desc">All cardiologists study the disorders of the heart, but the study of adult and
                   child heart disorders are trained to take care of small children and adult heart disease.
                 </p>
-                <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Neurocritical Care</li>
-                  <li>Neuro Oncology</li>
-                  <li>Geriatric Neurology</li>
-                </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -165,11 +155,6 @@
                   medicine.
                   Also it underpins every aspect of patient care, from diagnostic testing and treatment.
                 </p>
-                <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Surgical Pathology</li>
-                  <li>Histopathology</li>
-                  <li>Cytopathology </li>
-                </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -186,11 +171,6 @@
                   the
                   act of calibrating radon or radon progeny measurement devices.
                 </p>
-                <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Newborn Care</li>
-                  <li>Umbilical Cord Appearance </li>
-                  <li>Repositioning Techniques</li>
-                </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -206,11 +186,6 @@
                 <p class="service__desc">Pediatric providers see patients from birth into early adulthood to make sure
                   children achieve stay healthy. Our care includes preventive health checkups.
                 </p>
-                <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Clinical laboratory</li>
-                  <li>Research Analyst</li>
-                  <li>Quality Assurance</li>
-                </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -222,14 +197,16 @@
                 <i class="icon-heart2"></i>
               </div><!-- /.service__icon -->
               <div class="service__content">
-                <h4 class="service__title">Microbiologia</h4>
+                <h4 class="service__title">Vacinas</h4>
                 <p class="service__desc">For people requiring additional follow up, the Cardiac Clinic provides rapid
-                  access to professionals specialized in diagnosing and treating heart disease.
+                  access.
                 </p>
                 <ul class="list-items list-items-layout1 list-unstyled">
-                  <li>Macular degeneration</li>
-                  <li>Diabetic retinopathy</li>
-                  <li>Excessive tearing</li>
+                  <a href="https://api.whatsapp.com/send?phone=5584992113793">
+                    <li class="color-secondary"><i class="fa-brands fa-whatsapp fa-xl mr-2 color-secondary"></i>(84)
+                      99211-3793
+                    </li>
+                  </a>
                 </ul>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
@@ -258,18 +235,18 @@
             </div>
           </div>
           <div class="row mt-40 ml-0">
-            <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-12">
               <ul class="social-icons list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.row -->
         </div><!-- /.footer-widget__content -->
       </div><!-- /.container -->
   </div><!-- /.footer-primary -->
-  <div class="footer-secondary mt-20">
+  <div class="footer-secondary mt-20 mb-20">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6 col-lg-6">
