--- a/exames.html
+++ b/exames.html
@@ -77,7 +77,7 @@
        page title 
     =========================== -->
     <section class="page-title page-title-layout2 bg-overlay text-center pb-90">
-      <div class="bg-img"><img src="assets/images/page-titles/3.jpg" alt="background"></div>
+      <div class="bg-img"><img src="assets/images/backgrounds/cinza.png" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 offset-xl-2">
@@ -184,18 +184,18 @@
             </div>
           </div>
           <div class="row mt-40 ml-0">
-            <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-12">
               <ul class="social-icons list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.row -->
         </div><!-- /.footer-widget__content -->
       </div><!-- /.container -->
   </div><!-- /.footer-primary -->
-  <div class="footer-secondary mt-20">
+  <div class="footer-secondary mt-20 mb-20">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6 col-lg-6">
